<resources>
    <string name="app_name">TickerApp</string>
    <string name="favourite_tickers">Favourite tickers ⭐</string>
    <string name="search_tickers">Search tickers 🔎</string>
    <string name="ticker_details">Ticker details 📊</string>
    <string name="ticker_pattern">Ticker: %s</string>
    <string name="ticker_name_pattern">Name: %s</string>
    <string name="add_to_favourites">Add to ⭐</string>
    <string name="remove_from_favourites">Remove\nfrom ⭐</string>
    <string name="input_ticker_name">Input ticker name</string>
    <string name="market">Market:</string>
    <string name="homepage">Homepage:</string>
    <string name="no_tickers_yet">No tickers yet 🥲</string>
    <string name="ticker_already_added">Ticker is already added!</string>
    <string name="try_to_again">Try to search 🥲</string>
    <string name="something_went_wrong">Something went wrong 🥲</string>
    <string name="ticker">Ticker:</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
</resources>