<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/ticker_details" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:text="@string/ticker"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tickerValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintBottom_toBottomOf="@id/ticker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@id/ticker"
        tools:text="Ticker" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tickerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:text="@string/name"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ticker" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tickerNameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintBottom_toBottomOf="@id/tickerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@id/tickerName"
        tools:text="Ticker name" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="market, homepage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/market"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:text="@string/market"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tickerName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/marketValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintBottom_toBottomOf="@id/market"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@id/market"
        tools:text="some info" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:text="@string/homepage"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/market" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/homepageValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintBottom_toBottomOf="@id/homepage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@id/homepage"
        tools:text="some info" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:text="@string/phone"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homepage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/phoneValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_margin"
        android:textSize="@dimen/base_text_size"
        app:layout_constraintBottom_toBottomOf="@id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@id/phone"
        tools:text="some info" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFavAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone"
        tools:text="@string/remove_from_favourites" />
</androidx.constraintlayout.widget.ConstraintLayout>